[package]
name = "paxoskv"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quorum"
path = "src/main.rs"

[[bin]]
name = "proposer"
path = "src/cli.rs"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "*", features = ["full"] }
tonic-reflection = "0.11.0"

[build-dependencies]
tonic-build = "0.11"
