[package]
name = "standard-kv"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6"
prost = "0.9"
tracing = "0.1"

[dev-dependencies]
anyhow = "1" # 错误处理
async-prost = "0.3" # 支持把 protobuf 封装成 TCP frame
futures = "0.3" # 提供 Stream trait
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "macros", "net" ] } # 异步网络库
tracing-subscriber = "0.3" # 日志处理


[build-dependencies]
prost-build = "0.12"



